--- a/README.Rmd
+++ b/README.Rmd
@@ -88,15 +88,15 @@ usethis::create_from_github("hadley/fordogs", fork = FALSE, protocol = "https")
 
 ## Schedule
 
-| Time          | Activity         |
-| :------------ | :--------------- |
-| 09:00 - 10:30 | Session 1        |
-| 10:30 - 11:00 | *Coffee break*   |
-| 11:00 - 12:30 | Session 2        |
-| 12:30 - 13:30 | *Lunch break*    |
-| 13:30 - 15:00 | Session 3        |
-| 15:00 - 15:30 | *Coffee break*   |
-| 15:30 - 17:00 | Session 4        |
+| Time          | Day One          | Day Two          |
+| :------------ | :--------------- | :--------------- |
+| 09:00 - 10:30 | **Introduction / The Whole Game** (Charlotte) | **Using the tidyverse in packages** (Charlotte)       |
+| 10:30 - 11:00 | *Coffee break*            | *Coffee break*   |
+| 11:00 - 12:30 | **Testing** (Charlotte)                  | **Interface** (Hadley)     |
+| 12:30 - 13:30 | *Lunch break*             | *Lunch break*    |
+| 13:30 - 15:00 | **Documentation / Sharing** (Charlotte)   | **Types** (Hadley)           |
+| 15:00 - 15:30 | *Coffee break*            | *Coffee break*   |
+| 15:30 - 17:00 | **Dependencies** (Hadley)            | **OO programming / S3** (Charlotte)|
 
 ## Instructors
 
