--- a/README.Rmd
+++ b/README.Rmd
@@ -27,44 +27,6 @@ by Charlotte Wickham and Hadley Wickham
 
 -----
 
-## Slides
-
-* [Introduction and "The Whole Game"](1-intro.pdf)
-* [Unit Tests](2-testing.pdf)
-* [Documentation and Sharing](3-sharing.pdf)
-
-## Code
-
-Find our live coded notes in [`notes/`](notes/) as we commit them.
-
-You can see the scripts we'll work from in [`script/`](script/), but we recommend not reading too far ahead because you'll find answers to some of the exercises, and you'll learn more if you try to work through them first.
-
-## Questions?
-
-Feel free to ask questions in the [Building Tidy Tools Workshop RStudio Community thread](https://community.rstudio.com/t/building-tidy-tools-workshop-rstudio-conf-2020/49091).
-
-## Overview
-
-This is a two-day hands on workshop for those who have embraced the tidyverse and now want to expand it to meet their own needs. We'll discuss API design, functional programming tools, the basics of object design in S3, and the tidy eval system for NSE.
-
-* Learn efficient workflows for developing high-quality R functions, using the set of conventions codified by a package. You'll also learn workflows for unit testing, which helps ensure that your functions do exactly what you think they do. 
-* Master the art of writing functions that do one thing well and can be fluently combined together to solve more complex problems. We'll cover common function writing pitfalls and how to avoid them. 
-* Learn how to write collections of functions that work well together, and adhere to existing conventions so they're easy to pick up for newcomers. 
-
-You should take this workshop if you have experience programming in R and want to learn how to tackle larger scale problems. You'll get the most from it if you're already familiar with functions and are comfortable with R’s basic data structures (vectors, matrices, arrays, lists, and data frames). Note: There is ~30% overlap in the material with Hadley Wickham’s previous "R Masterclass". However, the material has been substantially reorganised, so if you've taken the R Masterclass in the past, you'll still learn a lot in this class.
-
-## Is this course for me?
-
-Have you written a few of your own R functions? Are you ready to start sharing your code (or data) through R packages? Are you curious what you can do to make your first R packages easy for your users to use, and for you to maintain?
-
-## Learning objectives
-
-## Materials
-
-Materials will be made available on [github](https://github.com/rstudio-conf-2020/build-tidy-tools).  If you are using an organization-issued laptop, you may want to verify before you arrive that you can access GitHub.
-
-The materials will evolve as the workshop approaches, so if you want to pre-download the materials, please wait until the day before the workshop.  
-
 ## Setup
 
 <!-- Fix later to generate from content of repo like https://github.com/hadley/tidy-tools/blob/master/README.Rmd -->
@@ -109,6 +71,47 @@ usethis::create_from_github("hadley/fordogs", fork = FALSE, protocol = "https")
 * When you're done, put a green post-it on your computer. 
 * If you need help, put up a pink post-it.
 -->
+If you're all set, you might like to download the first set of slides.
+
+
+## Slides
+
+* [Introduction and "The Whole Game"](1-intro.pdf)
+* [Unit Tests](2-testing.pdf)
+* [Documentation and Sharing](3-sharing.pdf)
+
+## Code
+
+Find our live coded notes in [`notes/`](notes/) as we commit them.
+
+You can see the scripts we'll work from in [`script/`](script/), but we recommend not reading too far ahead because you'll find answers to some of the exercises, and you'll learn more if you try to work through them first.
+
+## Questions?
+
+Feel free to ask questions in the [Building Tidy Tools Workshop RStudio Community thread](https://community.rstudio.com/t/building-tidy-tools-workshop-rstudio-conf-2020/49091).
+
+## Overview
+
+This is a two-day hands on workshop for those who have embraced the tidyverse and now want to expand it to meet their own needs. We'll discuss API design, functional programming tools, the basics of object design in S3, and the tidy eval system for NSE.
+
+* Learn efficient workflows for developing high-quality R functions, using the set of conventions codified by a package. You'll also learn workflows for unit testing, which helps ensure that your functions do exactly what you think they do. 
+* Master the art of writing functions that do one thing well and can be fluently combined together to solve more complex problems. We'll cover common function writing pitfalls and how to avoid them. 
+* Learn how to write collections of functions that work well together, and adhere to existing conventions so they're easy to pick up for newcomers. 
+
+You should take this workshop if you have experience programming in R and want to learn how to tackle larger scale problems. You'll get the most from it if you're already familiar with functions and are comfortable with R’s basic data structures (vectors, matrices, arrays, lists, and data frames). Note: There is ~30% overlap in the material with Hadley Wickham’s previous "R Masterclass". However, the material has been substantially reorganised, so if you've taken the R Masterclass in the past, you'll still learn a lot in this class.
+
+## Is this course for me?
+
+Have you written a few of your own R functions? Are you ready to start sharing your code (or data) through R packages? Are you curious what you can do to make your first R packages easy for your users to use, and for you to maintain?
+
+## Learning objectives
+
+## Materials
+
+Materials will be made available on [github](https://github.com/rstudio-conf-2020/build-tidy-tools).  If you are using an organization-issued laptop, you may want to verify before you arrive that you can access GitHub.
+
+The materials will evolve as the workshop approaches, so if you want to pre-download the materials, please wait until the day before the workshop.  
+
 
 ## Schedule
 
